fix: prevent zooming when input is focused on mobile
When on mobile, especially on IOS focusing on an input with font size less than 16px makes the browser zoom in

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -239,4 +239,12 @@
   .gsap-reveal {
     visibility: hidden;
   }
+
+  @media (max-width: 767px) {
+    input,
+    textarea,
+    select {
+      font-size: 16px !important;
+    }
+  }
 }
